# msdt

./: .gitignore  README.md  analyze_coupon_linear_nonlinear_shapecart.py  analyze_nswprice_teacher_signals.py  benchmark_root_rashomon_frontier.py  benchmark_teacher_guided_atomcolor_cached.py  dataset.py  debug_teacher_atomcolor_single_feature.py  lightgbm_binning.py  multisplit_experiment_runner.py  run_msplit_cache_worker.py  run_tabular_depth_benchmarks.py  tune_msplit_cached_optuna.py  tune_msplit_shapecart_optuna.py  visualize_multisplit_tree.py
SPLIT-ICML/: README.md
SPLIT-ICML/resplit/example/: resplit_example.py
SPLIT-ICML/split/: CMakeLists.txt
SPLIT-ICML/split/scripts/: benchmark_teacher_guided_atomcolor.py
SPLIT-ICML/split/src/: libgosdt.cpp
SPLIT-ICML/split/src/libgosdt/include/: msplit.hpp
SPLIT-ICML/split/src/libgosdt/src/: msplit_atomized.cpp  msplit_atomized_heuristic.cpp  msplit_atomized_support.cpp  msplit_core.cpp  msplit_linear.cpp  msplit_nonlinear.cpp
SPLIT-ICML/split/src/split/: MSPLIT.py  __init__.py
SPLIT-ICML/split/tests/: test_msplit_native_multiclass.py  test_msplit_native_smoke.py  test_msplit_source_guards.py
algorithm/msplit/src/: libgosdt.cpp
algorithm/msplit/src/libgosdt/include/: msplit.hpp
algorithm/msplit/src/libgosdt/src/: msplit_atomized.cpp  msplit_atomized_heuristic.cpp  msplit_atomized_support.cpp  msplit_core.cpp  msplit_linear.cpp
algorithm/msplit/src/libgosdt/stash/: msplit_atomized_pre_mosaic_implementation_20260318.cpp
algorithm/msplit/src/split/: MSPLIT.py  _binarizer.py  _classifier.py  _threshold_guessing.py
algorithm/msplit/tests/: test_msplit_native_smoke.py  test_msplit_source_guards.py
benchmark/artifacts/datasets/: README.md
benchmark/artifacts/datasets/coupon_legacy_msplit_atomized/: README.md
benchmark/scripts/: analyze_coupon_msplit_linear_nonlinear_vs_shapecart.py  benchmark_cached_common.py  benchmark_cached_fixed_config_msplit_vs_shapecart.py  benchmark_cached_gridcv_msplit_vs_shapecart.py  benchmark_cached_msplit.py  benchmark_cached_optuna_msplit_vs_shapecart.py  benchmark_cached_optuna_support.py  benchmark_cached_optuna_tuning.py  benchmark_paths.py  benchmark_slurm_submit_common.py  benchmark_teacher_guided_atomcolor_cached.py  cache_utils.py  dataset.py  experiment_utils.py  msplit_benchmark_defaults.py  run_cached_depth_benchmarks_msplit_linear_nonlinear_shapecart.py  run_cached_msplit_worker.py  run_cached_tuned_msplit_vs_shapecart.py  run_msplit_cache_worker.py  run_publication_gridcv_msplit_vs_shapecart.py  runtime_guard.py  submit_cached_gridcv_benchmark_slurm.py  submit_cached_optuna_benchmark_slurm.py  submit_dataset_benchmark_slurm.py  tree_artifact_utils.py  tune_cached_msplit_optuna.py  tune_msplit_cached_optuna.py  visualize_multisplit_tree.py  visualize_multisplit_tree_color.py  visualize_multisplit_tree_n.py
datasets/compas/: metadata.json
datasets/coupon/: metadata.json  summary_by_depth.csv
datasets/coupon/raw/: coupon_data_matrix.csv
docs/: msplit_algorithm_writeup.tex
scripts/: analyze_coupon_linear_nonlinear_shapecart.py  benchmark_teacher_guided_atomcolor_cached.py  run_cached_depth_benchmarks_msplit_linear_nonlinear_shapecart.py  run_msplit_cache_worker.py  tune_msplit_cached_optuna.py  visualize_multisplit_tree.py
split/: __init__.py
